# mxspp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  before_commit.py  create_devcontaier.py  download_dep.py  project_init.py  rebuild.py  requirements.txt  syntax.ebnf  toolchain.cmake
.devcontainer/: devcontainer.json
docker-dev/: Dockerfile  docker-compose.yml
docs/: Architecture.md  basic_syntax.md  develop_rule.md  ffi.md  type_system.md
example/examples/: README.md  basic_types.mxs  file_io.mxs  flow_control.mxs  generic_swap.mxs  hello_world.mxs  manual_optimization.mxs  matrix_class.mxs  panic_example.mxs  print_test.mxs  simple_function_return.mxs  static_fib.mxs  type_cast.mxs  universal_test.mxs  variable.mxs
include/mxspp/backend/: codegen.h
include/mxspp/core/: MXBoolean.h  MXDynamicTypeTable.h  MXError.h  MXFunction.h  MXInterface.h  MXMacro.h  MXNil.h  MXNumeric.h  MXObject.h  MXPopulationManager.h  MXString.h  MXType.h  _type_def.h  builtin_func.h
include/mxspp/driver/: driver.h
include/mxspp/frontend/: action.h  ast.h  grammer.hpp
include/mxspp/jit/: jit.h
include/mxspp/runtime/: runtime.h
include/mxspp/shell/: shell.h
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/core/: CMakeLists.txt  MXDynamicTypeInfoManager.cpp  MXError.cpp  MXObject.cpp  MXPopulationManager.cpp
src/driver/: CMakeLists.txt  main.cpp
src/frontend/: CMakeLists.txt  ast.cpp
src/jit/: CMakeLists.txt
src/runtime/: CMakeLists.txt
src/shell/: CMakeLists.txt  shell.cpp
